--- a/index.html
+++ b/index.html
@@ -3,57 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Noto+Serif:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS style -->
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="product.html">Product</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact_us.html">Contact</a></li>
-      </ul>
-      <button>Login</button>
-      <button>Register</button>
-    </nav>
-    <section class="home">
-      <div>
-        <h1>Crafted Merch Customized</h1>
-        <p>Custom Quality, Express Your Unique Style</p>
-        <button>Shop Now</button>
+    <nav class="navbar">
+      <img src="image/Icon/logo.png" alt="" width="70" />
+      <div class="container-navbar">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="product.html">Product</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact_us.html">Contact</a></li>
+          <li>
+            <a href="#"
+              ><img src="image/Icon/search.png" alt="" width="20"
+            /></a>
+          </li>
+        </ul>
       </div>
-      <br />
-      <img
-        src="image/home/01-cara-menggunakan-kaos-oversize 1.png"
-        alt=""
-        width="250"
-      />
-      <img src="image/home/il_1588xN 1.png" alt="" width="250" />
-    </section>
-    <br />
-    <section class="categories">
-      <h2>Our Categories Product</h2>
-      <div>
-        <img src="image/categories/orang baju 1.png" alt="" />
-        <img src="image/categories/orang topi1 1.png" alt="" />
-        <img src="image/categories/custom lanyard 1.png" alt="" />
-        <img src="image/categories/custom-tote-bag-canvas 1.png" />
-        <div style="display: flex; justify-content: space-between; width: 50%">
-          <h3>T-Shirt</h3>
-          <h3>T-Shirt</h3>
-          <h3>T-Shirt</h3>
-          <h3>T-Shirt</h3>
+      <div class="d-flex align-i-center">
+        <a href="#" class="link-1">Login</a>
+        <a href="#" class="link-2">Register</a>
+        <img
+          src="image/Icon/Line 1.png"
+          alt=""
+          width="0.8"
+          style="margin: 0 5px"
+        />
+        <img src="image/Icon/Buy.png" alt="" width="40" style="margin: 0 5px" />
+      </div>
+    </nav>
+    <section class="container-fluid" style="padding: 60px 60px; height: 500px">
+      <div class="row">
+        <div class="col-6 d-flex align-i-center justify-c-center">
+          <div>
+            <h1 class="h-text-1" style="padding-top: 150px">
+              Crafted <br />
+              Merch Customized
+            </h1>
+            <p class="p-text-1" style="padding-bottom: 20px">
+              Custom Quality, Express Your Unique Style
+            </p>
+            <a href="#" class="link-3" style="">Shop Now</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img
+            src="image/home/Ellipse 1.png"
+            alt=""
+            width="450"
+            style="
+              position: absolute;
+              transform: translate(230px, -10px);
+              z-index: -1;
+            "
+          />
+          <img
+            src="image/home/Ellipse 1.png"
+            alt=""
+            width="450"
+            style="
+              position: absolute;
+              transform: translate(-100px, 100px);
+              z-index: -1;
+            "
+          />
+          <div>
+            <img
+              src="image/home/image-1.png"
+              alt=""
+              style="position: absolute; transform: translate(-25px, 220px)"
+            />
+            <img
+              src="image/home/image-2.png"
+              alt=""
+              width="320"
+              style="position: absolute; transform: translate(300px, 100px)"
+            />
+          </div>
         </div>
       </div>
-      <p>
-        Terbuat dari material berkualitas sehingga awet dan nyaman saat dipakai.
-        Pilihan yang tepat untuk segala macam kebutuhan harian anda.
-      </p>
-      <h2>We Print Your Idea</h2>
-      <p>
-        Pesan Merchandise custom dengan desain kamu sendiri kini menjadi semakin
-        mudah dan menyenangkan di Crafted Merch Customized
-      </p>
     </section>
   </body>
 </html>
