--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Noto+Serif:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Jockey+One&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Noto+Serif:wght@600&display=swap"
       rel="stylesheet"
     />
     <!-- CSS style -->
@@ -42,7 +42,10 @@
         <img src="image/Icon/Buy.png" alt="" width="40" style="margin: 0 5px" />
       </div>
     </nav>
-    <section class="container-fluid" style="padding: 60px 60px; height: 500px">
+    <section
+      class="container-fluid"
+      style="padding: 60px 60px 350px 60px; height: 500px"
+    >
       <div class="row">
         <div class="col-6 d-flex align-i-center justify-c-center">
           <div>
@@ -59,39 +62,88 @@
         <div class="col-6">
           <img
             src="image/home/Ellipse 1.png"
+            class="ellipse-1"
             alt=""
             width="450"
-            style="
-              position: absolute;
-              transform: translate(230px, -10px);
-              z-index: -1;
-            "
           />
           <img
             src="image/home/Ellipse 1.png"
+            class="ellipse-2"
             alt=""
             width="450"
-            style="
-              position: absolute;
-              transform: translate(-100px, 100px);
-              z-index: -1;
-            "
           />
           <div>
-            <img
-              src="image/home/image-1.png"
-              alt=""
-              style="position: absolute; transform: translate(-25px, 220px)"
-            />
+            <img src="image/home/image-1.png" class="image-home-1" alt="" />
             <img
               src="image/home/image-2.png"
+              class="image-home-2"
               alt=""
               width="320"
-              style="position: absolute; transform: translate(300px, 100px)"
             />
           </div>
         </div>
       </div>
+    </section>
+    <section
+      class="container-fluid"
+      style="
+        padding: 4rem 0;
+        background: linear-gradient(
+          180deg,
+          rgba(60, 115, 92, 0.622) 27.6%,
+          rgba(216, 255, 241, 0) 100%
+        );
+      "
+    >
+      <div class="d-flex justify-c-center align-i-center">
+        <img src="image/home/line.png" alt="" style="margin-right: 20px" />
+        <h1 class="h-text-2">Our Categories Product</h1>
+        <img src="image/home/line.png" alt="" style="margin-left: 20px" />
+      </div>
+      <div class="image-product-home">
+        <div class="image-product">
+          <div class="wrap-image">
+            <img src="image/home/product-1.png" alt="" />
+          </div>
+          <h1 class="h-text-3" style="text-align: center">T-Shirt</h1>
+        </div>
+        <div class="image-product">
+          <div class="wrap-image">
+            <img src="image/home/product-2.png" alt="" />
+          </div>
+          <h1 class="h-text-3" style="text-align: center">Headwear</h1>
+        </div>
+        <div class="image-product">
+          <div class="wrap-image">
+            <img src="image/home/product-3.png" alt="" />
+          </div>
+          <h1 class="h-text-3" style="text-align: center">Lanyard</h1>
+        </div>
+        <div class="image-product">
+          <div class="wrap-image">
+            <img src="image/home/product-4.png" alt="" />
+          </div>
+          <h1 class="h-text-3" style="text-align: center">Totebag</h1>
+        </div>
+      </div>
+      <p class="p-text-2">
+        Terbuat dari material berkualitas sehingga awet dan nyaman saat dipakai.
+        <br />
+        Pilihan yang tepat untuk segala macam kebutuhan harian anda.
+      </p>
+      <div
+        class="d-flex justify-c-center align-i-center"
+        style="padding: 2rem 0"
+      >
+        <img src="image/home/line.png" alt="" style="margin-right: 20px" />
+        <h1 class="h-text-2">We Print Your Idea</h1>
+        <img src="image/home/line.png" alt="" style="margin-left: 20px" />
+      </div>
+      <p class="p-text-2">
+        Pesan Merchandise custom dengan desain kamu sendiri <br />
+        kini menjadi semakin mudah dan menyenangkan di <br />
+        Crafted Merch Customized
+      </p>
     </section>
   </body>
 </html>
