--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Jockey+One&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Noto+Serif:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Actor&family=Andika&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Jockey+One&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Serif:wght@600&family=Paytone+One&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
     <!-- CSS style -->
@@ -145,5 +145,59 @@
         Crafted Merch Customized
       </p>
     </section>
+    <footer>
+      <div class="row">
+        <div class="col-6">
+          <h1 class="h-text-4">Crafted Merch Customized</h1>
+          <p class="p-text-3">
+            Custom Quality, Express Your Unique Style Pesan Merchandise custom
+            dengan desain kamu sendiri kini menjadi semakin mudah dan
+            menyenangkan di Crafted Merch Customized
+          </p>
+          <div class="container-icon-link">
+            <a href="#">
+              <div class="icon-link">
+                <img src="image/Icon/twitter-black.png" alt="" width="15" />
+              </div>
+            </a>
+            <a href="#">
+              <div class="icon-link">
+                <img src="image/Icon/facebook-black.png" alt="" width="10" />
+              </div>
+            </a>
+            <a href="#">
+              <div class="icon-link">
+                <img src="image/Icon/instagram-black.png" alt="" width="15" />
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <h1 class="f-h-text">PRODUCT</h1>
+          <p class="f-p-text"><a href="#">T-Shirt</a></p>
+          <p class="f-p-text"><a href="#">Heardwear</a></p>
+          <p class="f-p-text"><a href="#">Lanyard</a></p>
+          <p class="f-p-text"><a href="#">Totebag</a></p>
+        </div>
+        <div class="col-2">
+          <h1 class="f-h-text">HELP</h1>
+          <p class="f-p-text"><a href="#">Contact Us</a></p>
+        </div>
+        <div class="col-2">
+          <h1 class="f-h-text">FOR MORE INFO</h1>
+          <p class="f-p-text-2"><a href="#"> info@craftedmerch</a></p>
+          <p class="f-p-text-2"><a href="#"> 083786998766</a></p>
+          <p class="f-p-text-2">
+            <a href="#"> Jl. Ketintang wiyata, Surabaya</a>
+          </p>
+        </div>
+      </div>
+      <div class="d-flex justify-c-center" style="padding-top: 2rem">
+        <img src="image/home/line 2.png" alt="" width="5000" />
+      </div>
+      <div class="d-flex justify-c-center" style="padding: 2rem 0">
+        <p class="f-p-text-3">CraftedMerch ©2023, All Rights Reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
