Halaman Contact Us Done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <!-- CSS style -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Craft Merch Customized - Home</title>
   </head>
   <body>
     <nav class="navbar">
